crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__partial_strict_argument.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let unused#5 : int -> int = addInteger (trace "kept" in 7) in
42
--- core after
let unused#5 : int -> int = addInteger (trace "kept" in 7) in
42
--- uplc before
(program 1.1.0
  [(lam unused_5 (con integer 42))
    [(builtin addInteger)
      (force [[(force (builtin trace)) (con string "kept")] (delay (con integer 7))])]])
--- uplc after
(program 1.1.0
  [(lam unused_5 (con integer 42))
    [(builtin addInteger)
      (force [[(force (builtin trace)) (con string "kept")] (delay (con integer 7))])]])
--- result
(con integer 42)
--- logs
["kept"]
