crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__saturated_builtin.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let unused#4 : int = divideInteger 1 0 in
42
--- core after
let unused#4 : int = divideInteger 1 0 in
42
--- uplc before
(program 1.1.0
  [(lam unused_4 (con integer 42))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- uplc after
(program 1.1.0
  [(lam unused_4 (con integer 42))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- result
error: Runtime(DivisionByZero(1, 0))
--- logs
[]
