crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__used_capture.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let unused#1 : int = 7 in
\unused#2 : int -> unused#1
--- core after
let unused#1 : int = 7 in
\unused#2 : int -> unused#1
--- uplc before
(program 1.1.0 [(lam unused_1 (lam unused_2 unused_1)) (con integer 7)])
--- uplc after
(program 1.1.0 [(lam unused_1 (lam unused_2 unused_1)) (con integer 7)])
--- result
(lam i0 (con integer 7))
--- logs
[]
